# GalVoder

./: .gitignore  ESTADO_PROXECTO.md  QWEN.md  README.md  index.html
.skills/android-deployer/: SKILL.md
.skills/android-deployer/scripts/: deploy.sh
3d_landing/: index.html  scene.js  style.css
android/: .gitignore  README.md  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  DSPComponents.h  VocoderEngine.cpp  VocoderEngine.h  VocoderProcessor.cpp  VocoderProcessor.h  vocoder_jni.cpp
android/app/src/main/java/com/antigravity/vocodergal/: MainActivity.kt
android/app/src/main/java/com/antigravity/vocodergal/audio/: VocoderBridge.kt
android/app/src/main/java/com/antigravity/vocodergal/ui/: VocoderScreen.kt
android/app/src/main/java/com/antigravity/vocodergal/viewmodel/: VocoderViewModel.kt
android/app/src/main/java/com/tonetxo/vocodergal/: MainActivity.kt
android/app/src/main/java/com/tonetxo/vocodergal/audio/: VocoderBridge.kt
android/app/src/main/java/com/tonetxo/vocodergal/ui/: VocoderScreen.kt
android/app/src/main/java/com/tonetxo/vocodergal/viewmodel/: VocoderViewModel.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
css/: style.css
docs/branding/: bretema_nixital_philosophy.md
js/: ai-service.js  audio-engine.js  constants.js  main.js  ui-controller.js
play_store_assets/: descriptions_gl.txt
(+12 files in other folders)
